--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <li><a href="#">Пункт2</a></li>
       <li><a href="#">Messenger</a>
       <ul>
-        <li><a href="messenger.html"></a></li>
+        <li><a href="messenger.html">MS</a></li>
       </ul>
       </li>    
       <li><a href="#">About Me</a>
