--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <li><a href="#">Пункт2</a></li>
       <li><a href="#">Option</a>
       <ul>
-        <li><a href = "messenger.html">Messenger</a></li>
+        <li><a href = "chat.html">Messenger</a></li>
       </ul>
       </li>
       <li><a href="#">About Me</a>
