--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <li><a href="#">Options</a>
         <ul>
           <li><a href="messenger.html">Messenger</a></li>
-          <li><a href="timer.html">Bomb Countdown</a></li>
+          <li><a href="timer.html">Timer</a></li>
         </ul>
       </li>
 
