--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <ul>
           <li><a href="mole.html">Whack a mole</a></li>
           <li><a href="pilots.html">The pilots brother's refrigerator</a></li>
-          <li><a href="art.html">ggg</a></li>
+          <li><a href="art.html">Art station</a></li>
         </ul>
       </li>
 
